# atropa_pulsechain

./: .gitignore  .marinerignore  000_dysnomia.sol  00b_vmreq.sol  00c_multiownable.sol  01_dysnomia.sol  01_sh.sol  01b_fa.sol  02_sha.sol  02b_shainterface.sol  02c_shafactory.sol  02d_shafactoryinterface.sol  03_shio.sol  03b_shiointerface.sol  03c_shiofactory.sol  03d_shiofactoryinterface.sol  04_belt.sol  04_shio.sol  04_yi.sol  04b_yiinterface.sol  05_zheng.sol  05b_zhenginterface.sol  06_zhou.sol  06b_zhouinterface.sol  07_yau.sol  07b_yauinterface.sol  08_yang.sol  08b_yanginterface.sol  09_siu.sol  Makefile  ORIGINAL_REQUEST.md  PROJECT.md  TEST_INFRA.md  TEST_READY.md  TSFI_IPOMOEA_PLAN.md  YI_ICON_REPRODUCIBILITY.md  accessregistry.sol  addresses.sol  affinity.sol  articleregistry.sol  (+65 more)
.agents/: AGENTS.md  GRADES.md  ORIGINAL_REQUEST.md
Apparition/: Apparition.cs  Apparition.csproj
AtropaAndroid/: AtropaAndroid.csproj  MainActivity.cs  PulseAPI.cs  SQLiteHelper.cs
Discovery/: Context.sol  Discovery.sol  ERC20.sol  ERC20Burnable.sol  IERC20.sol  IERC20Metadata.sol  Ownable.sol
Dysnomia/: Beta.cs  Controller.cs  Dysnomia.csproj
RoyaltyPairFinder/: index.js  package.json
Wallet/: Accounts.cs  Aliases.cs  Contracts.cs  Events.cs  LocalWallet.cs  Wallet.cs  Wallet.csproj
assets/: rdbms_ledger.json  rdbms_tables.json  sprite_prompt.txt
benchmarks/: README  System0-NanD.tgz  bench_self_compiler.c  pluginkernel.txt  system0-APOGEE.tgz  (+6 more)
firmware/wifi_lora_32_idf/main/: CMakeLists.txt  lora_sx1262.cpp  lora_sx1262.h  main.cpp  ssd1306_i2c.cpp  ssd1306_i2c.h
(+4604 files in other folders)
