idf_component_register(
    SRCS 
        "main.cpp" 
        "lora_sx1262.cpp" 
        "ssd1306_i2c.cpp"
    INCLUDE_DIRS 
        "."
    PRIV_REQUIRES 
        driver 
        esp_driver_spi
        esp_driver_i2c
        esp_driver_gpio
        esp_driver_uart
        esp_timer 
        mbedtls 
        spiffs 
        esp_partition
        efuse
        nvs_flash
)
